# rag-case-study

./: .gitattributes  .gitignore  .gitleaks.toml  .tool-versions  CASE_STUDY.md  CLAUDE.md  Makefile  PROGRESS.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/data/: customs_entries_oct2024_mar2025.csv
backend/knowledge/: customer_profiles_qbr_metrics.txt  customs_core_concepts.txt  data_dictionary.txt
backend/prompts/: behavioral.md  data_overview.md  knowledge_always_on.md  output_format.md  persona.md  scope.md  tools_guidance.md
backend/scripts/: build_index.py  generate_evaluation_md.py
backend/src/customs_agent/: config.py  main.py
backend/src/customs_agent/agent/: _dispatch.py  bootstrap.py  contracts.py  history.py  loop.py  prompt.py  refusal.py  validator.py
backend/src/customs_agent/api/: _cors.py  _rate_limit.py  _request_id.py  _security_headers.py  auth.py  chat.py  health.py  starter_prompts.py
backend/src/customs_agent/config/: __init__.py  _settings.py  starter_prompts.py
backend/src/customs_agent/data/: load.py  validation.py  views.py
backend/src/customs_agent/observability/: __init__.py  events.py  logging.py  scrubber.py
backend/src/customs_agent/rag/: _tokenize.py  always_on.py  chunker.py  retriever.py
backend/src/customs_agent/tools/: __init__.py  _allowlists.py  _filters.py  _shared.py  compare_customers.py  effective_duty_rate.py  hold_summary.py  lookup_knowledge.py  qbr_summary.py  query_entries.py  top_hts_by_duty.py  total_duty_breakdown.py
backend/tests/: _fakes.py  conftest.py  ground_truth.json  ground_truth.py
backend/tests/eval/: _grading.py  _report.py  conftest.py  test_out_of_scope.py  test_questions.py
backend/tests/integration/: conftest.py  stub_llm.py  test_agent_loop.py  test_auth.py  test_chat.py  test_cors.py  test_health.py  test_rate_limit.py  test_ready.py  test_request_logging.py  test_security_headers.py  test_starter_prompts.py
backend/tests/snapshots/: system_prompt.md
backend/tests/unit/agent/: conftest.py  test_bootstrap.py  (+7 more)
(+66 files in other folders)
