[project]
name = "customs-agent"
version = "0.1.0"
description = "Conversational analytics agent over U.S. customs entry data, grounded in a domain knowledge layer."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi >= 0.115",
    "uvicorn[standard] >= 0.30",
    "pydantic >= 2.9",
    "pydantic-settings >= 2.5",
    "duckdb >= 1.1",
    "chromadb >= 0.5",
    "rank-bm25 >= 0.2",
    "anthropic >= 0.40",
    "openai >= 1.50",
    "langfuse >= 2.50",
    "structlog >= 24.0",
    "slowapi >= 0.1.9",
    "httpx >= 0.27",
]

[dependency-groups]
dev = [
    "pytest >= 8.3",
    "pytest-asyncio >= 0.24",
    "ruff >= 0.7",
    "mypy >= 1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/customs_agent"]

[tool.uv]
package = true
# Force uv to resolve to a version graph that's installable on BOTH the
# linux/amd64 Docker target (production) and macOS x86_64 (this dev machine).
# Without this, transitive deps like `onnxruntime` resolve to versions whose
# wheels were dropped for macOS x86_64 (>= 1.20).
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

# ─────────────────────────────────────────────────────────────────────────────
# Tool configurations live here (single source of truth — no separate
# ruff.toml / mypy.ini / pytest.ini files).
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: pure-function tests, no LLM (fast)",
    "integration: agent loop with mocked LLM (fast)",
    "eval: end-to-end with real LLM (slow, costs money)",
]
